fix: align blog post list layout

--- a/css/coder.css
+++ b/css/coder.css
@@ -1702,7 +1702,7 @@ a.card:hover {
 
 .post-tree {
   grid-column: 1;
-  grid-row: 2;
+  grid-row: 1;
   position: sticky;
   top: 5.95rem;
   display: flex;
@@ -1737,7 +1737,7 @@ a.card:hover {
 }
 
 .post-mobile-heading {
-  display: block;
+  display: none;
   grid-column: 1;
   grid-row: 1;
   min-width: 0;
@@ -1982,7 +1982,7 @@ a.card:hover {
 
 .post-detail {
   grid-column: 2;
-  grid-row: 1 / span 2;
+  grid-row: 1;
   min-width: 0;
 }
 
